conformance/tests/listenerset-listener-precedence.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-with-listenerset-http-listener
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  allowedListeners:
    namespaces:
      from: Same
  listeners:
  - name: gateway-listener
    port: 80
    protocol: HTTP
    hostname: "gateway-listener.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: domain-name-conflict-listener
    port: 8010
    protocol: HTTP
    hostname: "domain-name-conflict-listener.com"
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-with-listenerset-http-listener
    namespace: gateway-conformance-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /gateway-route
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: listenerset-with-domain-name-conflict
  namespace: gateway-conformance-infra
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-with-listenerset-http-listener
    namespace: gateway-conformance-infra
  listeners:
  - name: domain-name-conflict-listener
    port: 8010
    protocol: HTTP
    hostname: "domain-name-conflict-listener.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: protocol-conflict-listener
    port: 8020
    protocol: HTTP
    hostname: "protocol-conflict-listener.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: listenerset-1-listener
    port: 8080
    protocol: HTTP
    hostname: "listenerset-1-listener.com"
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listenerset-with-domain-name-conflict-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - kind: XListenerSet
    group: gateway.networking.x-k8s.io
    name: listenerset-with-domain-name-conflict
    namespace: gateway-conformance-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /listenerset-1-route
    backendRefs:
    - name: infra-backend-v2
      port: 8080
---
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: listenerset-with-protocol-conflict
  namespace: gateway-conformance-infra
spec:
  parentRef:
    kind: Gateway
    group: gateway.networking.k8s.io
    name: gateway-with-listenerset-http-listener
    namespace: gateway-conformance-infra
  listeners:
  - name: domain-name-conflict-listener
    port: 8010
    protocol: HTTP
    hostname: "domain-name-conflict-listener.com"
    allowedRoutes:
      namespaces:
        from: All
  - name: protocol-conflict-listener
    port: 8020
    protocol: TCP
    allowedRoutes:
      namespaces:
        from: All
  - name: listenerset-2-listener
    port: 8090
    protocol: HTTP
    hostname: "listenerset-2-listener.com"
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: listenerset-with-protocol-conflict-route
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - kind: XListenerSet
    group: gateway.networking.x-k8s.io
    name: listenerset-with-protocol-conflict
    namespace: gateway-conformance-infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /listenerset-2-route
    backendRefs:
    - name: infra-backend-v3
      port: 8080
